--- a/BooksApi/app/build.gradle
+++ b/BooksApi/app/build.gradle
@@ -25,6 +25,13 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.2.0"
+    def arch_version = "2.1.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -39,4 +46,5 @@ dependencies {
     /*implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt  'com.github.bumptech.glide:compiler:4.11.0'*/
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
 }
